--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "@types/node": "^22.13.0",
+    "@types/pinyin": "^2.10.2",
     "axios": "^1.7.2",
+    "pinyin": "^4.0.0-alpha.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "segmentit": "^2.0.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
